fixed horizontal scroll issue

--- a/src/components/training/Training.less
+++ b/src/components/training/Training.less
@@ -15,6 +15,9 @@
   height: calc(100vh - 204px);
 }
 .courses.main-content{
+  height: calc(100vh - 144px);
+}
+.lessons.courses.main-content{
   height: calc(100vh - 210px);
 }
 .course-description p{
